[package]
name = "arcs-hipot"
version = "0.1.0"
authors = ["Keefe Murphy <kbm@keefemurphy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros", "io-util", "time"] }
tokio-serial = "4.3"
